tests/baselines/reference/enumMemberResolution.errors.txt
enumMemberResolution.ts(4,9): error TS2304: Cannot find name 'IgnoreRulesSpecific'.
enumMemberResolution.ts(4,29): error TS1003: Identifier expected.


==== enumMemberResolution.ts (2 errors) ====
    enum Position2 {
        IgnoreRulesSpecific = 0
    }
    var x = IgnoreRulesSpecific. // error
            ~~~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'IgnoreRulesSpecific'.
                                
!!! error TS1003: Identifier expected.
    var y = 1;
    var z = Position2.IgnoreRulesSpecific; // no error
    